--- a/home.html
+++ b/home.html
@@ -13,8 +13,13 @@ h1{
   letter-spacing: -5px;
   
 }
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
 }
-title {
+}
+h2 {
   font-size: 40px;
   font-family: arial-black;
 }
@@ -22,15 +27,58 @@ div2 {
   font-size: 40px;
   font-family: arial-black;
 }
+body {
+  background-color: red;
+  -webkit-animation-name: example; 
+  -webkit-animation-duration: infinite; 
+  animation-name: example;
+   animation-duration:2000ms;
+  animation-iteration-count: infinite;
+  animation-duration: infinite;
+}
+
+@-webkit-keyframes example {
+  0%   {background-color: #568052;}
+  25%  {background-color: #68FF57;}
+  50%  {background-color: #ACFFA3;}
+  100% {background-color: #45803F;}
+}
+  
+  
 	</style>
 <div class="title"> SOMERS </div>
+
+
 <h1> Week 1 </h1><br>
-<div2>1.2.3.4</div2>
+<div2>
+  <a href="tweet1.1.html">1.</a> 
+ <a href="tweet1.2.html">2.</a>
+ <a href="tweet1.3.html">3.</a>
+ <a href="tweet1.4.html">4.</a>
+</div2>
+
 <h1> Week 2 </h1><br>
-<div2>1.2.3.4</div2>
+<div2>
+  <a href="tweet2.1.html">1.</a> 
+ <a href="tweet2.2.html">2.</a>
+ <a href="tweet2.3.html">3.</a>
+ <a href="tweet2.4.html">4.</a>
+</div2>
+
 <h1> Week 3 </h1><br>
-<div2>1.2.3.4</div2>
+<div2>
+  <a href="tweet3.1.html">1.</a> 
+ <a href="tweet3.2.html">2.</a>
+ <a href="tweet3.3.html">3.</a>
+ <a href="tweet3.4.html">4.</a>
+</div2>
+
 <h1> Week 4 </h1><br>
-<div2>1.2.3.4</div2>
+<div2>
+  <a href="tweet4.1.html">1.</a> 
+ <a href="tweet4.2.html">2.</a>
+ <a href="tweet4.3.html">3.</a>
+ <a href="tweet4.4.html">4.</a>
+</div2>
 </body>
 </html>
